cli/tests/error_syntax.js.out
error: Expected ,, got following at [WILDCARD]tests/error_syntax.js:3:5
